# project_euler

./: .flake8  .gitignore  1.py  10.py  10_refactor.py  12.py  13.py  14.py  15.py  18.py  2.py  20.py  22.py  23.py  25.py  26.py  27.py  28.py  29.py  3.py  30.py  31.py  32.py  4.py  5.py  6.py  7.py  8.py  9.py  CPAROOT-CA.pem  Dockerfile  Pipfile  _template.py  docker-compose.yml  pip.conf  primes.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.pytest_cache/v/cache/: lastfailed  nodeids
.pytest_cache/v/flake8/: mtimes
project_euler/: 1.py  11.py  16.py  17.py  18.py  19.py  24.py  26.py  3.py  33.py  5.py  7.py  8.py  __init__.py  __main__.py  checker.py  primes.py  problem_003.py  problem_004.py  problem_005.py  problem_006.py  problem_007.py  problem_008.py  problem_009.py  problem_010.py  problem_010_refactor.py  problem_011.py  problem_013.py  problem_014.py  problem_016.py  problem_017.py  problem_020.py  problem_021.py  problem_022.py  problem_024.py  problem_025.py  problem_029.py  problem_030.py  problem_032.py  problem_034.py  (+11 more)
project_euler/problems/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  010.py  011.py  012.py  013.py  014.py  015.py  016.py  017.py  018.py  019.py  020.py  021.py  022.py  023.py  024.py  025.py  026.py  027.py  028.py  029.py  030.py  031.py  032.py  033.py  034.py  035.py  036.py  037.py  038.py  039.py  040.py  (+60 more)
test/: test_33.py  test_34.py  test_checker.py  test_pu36.py  test_pu37.py  test_utilities.py
